--- a/WorkoutWeb/Views/Shared/_Layout.cshtml
+++ b/WorkoutWeb/Views/Shared/_Layout.cshtml
@@ -27,15 +27,13 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Link</a></li>
-        <li>@Html.ActionLink("GraphData","GetPieData","Graph")</li>
-        <li>@Html.ActionLink("Graph","ShowGraph","Graph")</li>
         
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Graphs <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+        <li>@Html.ActionLink("GraphData","GetPieData","Graph")</li>
+        <li>@Html.ActionLink("Graph","ShowGraph","Graph")</li>
+        <li>@Html.ActionLink("Set up","Index","Graph")</li>
             <li class="divider"></li>
             <li><a href="#">Separated link</a></li>
             <li class="divider"></li>
