--- a/WorkoutWeb/Views/Graph/ShowGraph.cshtml
+++ b/WorkoutWeb/Views/Graph/ShowGraph.cshtml
@@ -43,7 +43,7 @@
      
 
    
-      $.get('GetPieData').done(function (data) {
+      $.get('GetPieData(1').done(function (data) {
         //Success
         drawPie(data);
       }).fail(function (error) {
