--- a/WorkoutWeb/Views/Graph/Index.cshtml
+++ b/WorkoutWeb/Views/Graph/Index.cshtml
@@ -14,11 +14,11 @@
   <div class="row">
     <div class="col-md-2">
       <label>Name:</label>
-      <input type="text" data-ng-model="pie.Name" placeholder="Name" class="form-control" />
+      <input type="text" data-ng-model="pie.Name" placeholder="Name" class="form-control" data-ng-cloak="" />
     </div>
     <div class="col-md-1">
       <label>Amount:</label>
-      <input type="text" data-ng-model="pie.Value" placeholder="Value" class="form-control" />
+      <input type="text" data-ng-model="pie.Value" placeholder="Value" class="form-control" data-ng-cloak="" />
     </div>
     <div class="col-md-1">
       <button class="btn btn-primary" data-ng-click="save()" data-ng-hide="updateMode" data-ng-cloak="">Submit</button>
